# python_example

./: .gitignore  .pylintrc  Dockerfile  Jenkinsfile  README.md  TODO  pyproject.toml
Github/: README.md
Jenkins/: Dockerfile  README.md
flaskr/: __init__.py  auth.py  blog.py  db.py
