[project]
name = "flaskr"
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
maintainers = [{name = "Pallets", email = "contact@palletsprojects.com"}]
dependencies = [
    "coverage",
    "flask",
    "pytest",
    "pylint",
]

[tool.setuptools.packages.find]
exclude = ["Github*", "Jenkins*"]

[project.urls]
Documentation = "https://flask.palletsprojects.com/tutorial/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["flaskr", "tests"]
